--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -28,7 +28,7 @@ dependencies {
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
 }
 
-afterEvaluate {
-  // don't run the JPS plugin
-  project.tasks.remove( project.getTasks().runIde )
-}
+//afterEvaluate {
+//  // don't run the JPS plugin
+//  project.tasks.remove( project.getTasks().runIde )
+//}
