--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -19,16 +19,16 @@ intellij {
 }
 
 dependencies {
-  compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-util', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-util', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
 
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+  testImplementation group: 'junit', name: 'junit', version: '4.12'
 
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
 }
 
-afterEvaluate {
-  // don't run the JPS plugin
-  project.tasks.remove( project.getTasks().runIde )
-}
+//afterEvaluate {
+//  // don't run the JPS plugin
+//  project.tasks.remove( project.getTasks().runIde )
+//}
