update build for 2020.3 (android studio)

--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,10 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.concurrent.TimeUnit
 
 plugins {
-  id 'org.jetbrains.intellij' version '0.6.3'
+  id 'org.jetbrains.intellij' version '1.3.0'
 }
 
 description = 'Manifold :: IJ'
-
-wrapper {
-  gradleVersion = '4.9'
-}
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
@@ -28,7 +24,8 @@ allprojects {
     if(!System.getenv('CI')) {
       mavenLocal()
     }
-    jcenter()
+    mavenLocal()
+    mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
   }
 
@@ -47,29 +44,29 @@ subprojects {
 jar {
   manifest {
     attributes(
-      'Contains-Sources': 'darkj'
+            'Contains-Sources': 'darkj'
     )
   }
 }
 
 dependencies {
-  compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-util', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-darkj', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-image', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-props', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-strings', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-exceptions', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-preprocessor', version: manifoldVersion
-  compile group: 'systems.manifold', name: 'manifold-xml-rt', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-util', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-darkj', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-image', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-props', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-strings', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-exceptions', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-preprocessor', version: manifoldVersion
+  implementation group: 'systems.manifold', name: 'manifold-xml-rt', version: manifoldVersion
 
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+  testImplementation group: 'junit', name: 'junit', version: '4.12'
 
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
   manifoldEp group: 'systems.manifold', name: 'manifold-ext-producer-sample', version: manifoldVersion
 
-  compile project('jps-plugin')
+  implementation project('jps-plugin')
 }
 
 configurations.all {
@@ -96,40 +93,31 @@ intellij {
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 2019.3.3'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 193.3793.14'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 193.5233.102'
-  alternativeIdePath = 'C:\\Program Files\\Android\\Android Studio1'
-  pluginName project.name
-  version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
-  if( version.contains( "EAP" ) || Double.parseDouble( version.substring(0, version.lastIndexOf('.'))) >= 2019.2 )
-  {
-    plugins = ['java', 'com.intellij.lang.jsgraphql:2.4.0'] //include PsiViewer & GraphQL JS in sandbox
-  }
-  else
-  {
-    plugins = ['com.intellij.lang.jsgraphql:2.4.0'] //include PsiViewer & GraphQL JS in sandbox
-  }
+  //alternativeIdePath = 'C:\\Program Files\\Android\\Android Studio1'
+  pluginName = project.name
+  version = getIjVersion()
+  plugins = ['com.intellij.java'] //, 'com.intellij.lang.jsgraphql:2.4.0'] //include PsiViewer & GraphQL JS in sandbox
 }
 
 runIde {
-  minHeapSize '1g'
-  maxHeapSize '4g'
+  minHeapSize = '1g'
+  maxHeapSize = '4g'
 }
 
 patchPluginXml {
-  sinceBuild '203.0'
-  untilBuild '203.*'
+  sinceBuild = '203.0'
+  untilBuild = '203.*'
 }
 
-publishPlugin {
-  username = System.getenv('JB_PUBLISH_USER')
-  password = System.getenv('JB_PUBLISH_PASS')
+buildSearchableOptions {
+  enabled = false
 }
 
 test {
   //uncomment below to show stdout/stderr in console
   //testLogging.showStandardStreams = true
-
   testLogging {
-    events TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED
+    events = [TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED]
   }
 
   //set a system property in the test JVM containing the path to manifold-all (it could be under ~/.gradle/caches or ~/.m2/repository)
