--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,10 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.concurrent.TimeUnit
 
 plugins {
-  id 'org.jetbrains.intellij' version '1.2.1'
+  id 'org.jetbrains.intellij' version '1.3.0'
 }
 
 description = 'Manifold :: IJ'
-
-wrapper {
-  gradleVersion = '4.9'
-}
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
@@ -31,6 +27,12 @@ allprojects {
     mavenLocal()
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+  }
+
+  // this test block fixes an IJ 2021.3 issue where it won't run tests
+  test {
+    scanForTestClasses false
+    include "**/*Test.class"
   }
 
   apply plugin: 'java'
@@ -97,6 +99,8 @@ intellij {
 runIde {
   minHeapSize = '1g'
   maxHeapSize = '4g'
+// uncomment to override the ide that is run
+//  ideDir = new File("C:\\Program Files\\JetBrains\\ideaIU-2021.3")
 }
 
 patchPluginXml {
