--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -25,7 +25,6 @@ dependencies {
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
 }
 
-//afterEvaluate {
-//  // don't run the JPS plugin
-//  project.tasks.remove( project.getTasks().runIde )
-//}
+runIde {
+  enabled = false
+}
