--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -231,6 +231,16 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
     <![CDATA[
 <h3>Fixes & Features:</h3>
 <h4>
+<a href="https://github.com/manifold-systems/manifold/issues/290">#290</a>: address lag in intellij editor after adding errors
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/328">#328</a>: editing a graphql file in IntelliJ causes some graphql types not to resolve
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/329">#329</a>: 'Array index out of bounds' warning highlight in IJ editor for indexed access to Maps
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/330">#330</a>: NPE in IntelliJ inside fileOpenedSync() when manifold-props not in use
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/324">#324</a>: fix general lag in IJ editor after typing
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/327">#327</a>: fix conflict with preprocessor build.properties and environment symbols
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/326">#326</a>: Add a preprocessor SymbolProvider implementation for Android build variants
