--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -231,6 +231,8 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
     <![CDATA[
 <h3>Fixes & Features:</h3>
 <h4>
+<a href="https://github.com/manifold-systems/manifold/issues/338">#338</a>: fix ManTL template issues that have piled up with recent JetBrains platform updates
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/337">#337</a>: Support structural interface implementation via Extension Class without having to manually create an IProxyFactory service impl
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/336">#336</a>: IntelliJ plugin: performing a clean build from maven/gradle tool causes perpetual refresh in UI
