--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -3,9 +3,16 @@
   <name>Manifold</name>
   <description>
     <![CDATA[
-<p>Manifold is a Java compiler plugin. Its features include:</p>
+<p>Manifold is a Java compiler plugin. It supplements Java with:</p>
 <ul>
-  <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-core-parent/manifold"><em>Type-safe</em> Meta-programming</a></li>
+  <li>Direct, <i>type-safe</i> access to:</li>
+  <ul>
+    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-graphql">GraphQL</a> schemas, queries, etc.</li>
+    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-json">JSON & JSON Schema</a>, <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-yaml">YAML</a>, <a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-xml">XML</a>
+    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-csv">CSV</a></li>
+    <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-js">JavaScript</a></li>
+    <li>etc.</li>
+  </ul>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext">Extension Methods</a></li>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-props">Properties</a></li>
   <li><a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext#operator-overloading">Operator Overloading</a></li>
@@ -15,7 +22,7 @@
   <li>...and more</li>
 </ul>
 <p>All fully supported in <strong>Java 8 - 17</strong> with comprehensive IDE support in <strong>IntelliJ IDEA</strong> and <strong>Android Studio</strong>.
-Simply add Manifold to your existing project and begin taking advantage of it.</p>
+Manifold consists of a set of modules, one for each feature. Simply add the Manifold dependencies of your choosing to your existing project and begin taking advantage of them.</p>
 <blockquote>
   <p><em><strong>New!</strong></em></p>
   <strong>Properties for Java!</strong>
