- support 2022.1 eap - more changes to maybe fix the bug Thibaut is helping with

--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,11 @@ runIde {
 
 patchPluginXml {
   sinceBuild = '213.0'
-  untilBuild = '213.*'
+  untilBuild = '221.*'
+}
+
+buildSearchableOptions {
+  enabled = false
 }
 
 test {
