--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -28,6 +28,10 @@ dependencies {
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
 }
 
+buildSearchableOptions {
+  enabled = false
+}
+
 //afterEvaluate {
 //  // don't run the JPS plugin
 //  project.tasks.remove( project.getTasks().runIde )
