--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 #
 #
 
-version=2022.1.3
-manifoldVersion=2022.1.5
+version=2022.1.5
+manifoldVersion=2022.1.5-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
