--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -251,7 +251,8 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
 
   <depends>com.intellij.modules.java</depends>
 
-  <product-descriptor code="PMANIFOLD" optional="true" release-date="20200212" release-version="20201"/>
+  <!-- no longer a paid plugin -->
+  <!--  <product-descriptor code="PMANIFOLD" optional="true" release-date="20200212" release-version="20201"/>-->
 
   <change-notes>
     <![CDATA[
