--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -232,12 +232,15 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
 
   <depends>com.intellij.modules.java</depends>
 
-  <product-descriptor code="PMANIFOLD" optional="true" release-date="20200212" release-version="20201"/>
+  <!-- no longer a paid plugin -->
+  <!--  <product-descriptor code="PMANIFOLD" optional="true" release-date="20200212" release-version="20201"/>-->
 
   <change-notes>
     <![CDATA[
 <h3>Fixes & Features:</h3>
 <h4>
+The Manifold IntelliJ plugin is FREE now :)
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/338">#338</a>: fix ManTL template issues that have piled up with recent JetBrains platform updates
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/337">#337</a>: Support structural interface implementation via Extension Class without having to manually create an IProxyFactory service impl
