--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 #
 #
 
-version=2022.1.7
-manifoldVersion=2022.1.7-SNAPSHOT
+version=2022.1.10
+manifoldVersion=2022.1.10-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2022.1
