--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -260,6 +260,14 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
 <h4>
 The Manifold IntelliJ plugin is FREE now :)<br>
 <br>
+<a href="https://github.com/manifold-systems/manifold/issues/355">#355</a>: fix instanceof Pattern Matching within if-statement condition (Cannot Find Symbol)
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/351">#351</a>: Increment/decrement operators on properties cause compiler exception in Java 11+
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/349">#349</a>: Support non-public extension methods
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/348">#348</a>: @ThisClass extension method receiver, provides the calling class of static method
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/345">#345</a>: Allow Jailbreak to work when casting
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/338">#338</a>: fix ManTL template issues that have piled up with recent JetBrains platform updates
