--- a/build.gradle
+++ b/build.gradle
@@ -119,7 +119,7 @@ runIde {
   minHeapSize = '1g'
   maxHeapSize = '4g'
 // uncomment to override the ide that is run
-//  ideDir = new File("C:\\Program Files\\JetBrains\\ideaIU-2021.3")
+//  ideDir = new File("C:\\Program Files\\JetBrains\\IntelliJ IDEA 2022.2")
 }
 
 patchPluginXml {
