--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 #
 #
 
-version=2022.1.21
-manifoldVersion=2022.1.19-SNAPSHOT
+version=2021.3.22
+manifoldVersion=2022.1.22-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2022.2.3
