--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -259,6 +259,12 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
 <h3>Change notes:</h3>
 <h4>
 <br>
+<a href="https://github.com/manifold-systems/manifold/issues/396">#396</a>: Handle expression in foreach stmt where the expression type structurally implements Iterator and a class extension exists that makes Iterable structural
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/395">#395</a>: Support property inference on record types
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/394">#394</a>: Support EA release of JDK 20
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/393">#393</a>: Java 17+: fix $ escape char for string templates
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/392">#392</a>: Cast as raw generic type
